--- a/css/quiz.css
+++ b/css/quiz.css
@@ -40,10 +40,18 @@
     padding-right: 20px;
   }
   /* Container styles */
+
+table, th, td{
+  border:1px solid black;
+}
+.row{
+  display: inline;;
+}
+
 .container {
     padding: 20px;
     flex-direction: column;
-    width: 80%;
+    width: 100%;
     margin: auto;
     align-items: flex-start;
     justify-content: flex-start;
