--- a/css/accueil.css
+++ b/css/accueil.css
@@ -128,12 +128,6 @@ a::after {
     margin: 0;
     padding: 0;
 }
-
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    height: 100vh;
-}
-
 .accueil {
     height: 100%;
     width: 100%;
@@ -349,7 +343,7 @@ a::after {
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    height: 100vh;
+    height: 100%;
 }
 
 .accueil {
