--- a/css/quiz.css
+++ b/css/quiz.css
@@ -44,8 +44,10 @@
 table, th, td{
   border:1px solid black;
 }
+
 .row{
-  display: inline;;
+  display: block;
+  width:100%;
 }
 
 .container {
@@ -104,7 +106,7 @@ table, th, td{
     text-align: left;
   }
   .show {
-    display: flex;
+    display: block;
   }
   
   .hide {
