--- a/css/cyberharcelement.css
+++ b/css/cyberharcelement.css
@@ -1,4 +1,109 @@
-h4{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+h4 {
     text-align: center;
+    border-radius: 10px;
+    border: 2px solid #660000;
+    background-color: #22201f;
+}
+.p-4{
+	background-color: #ff94292d;
+	border: 4px solid #660000;
+	border-radius: 10px;
+}
+.Msg{
+	
+    position: relative;
+	top: 100;
+	display: inline;
+	border: 12px solid #660000;
+	border-radius: 10px;
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
+	
+
+.button{
+	padding: 6px 10px;
+	background: #FC7F3C;
+	color: black;
+	-webkit-border-radius: 11px;
+	-moz-border-radius: 11px;
+	border-radius: 2rem;
+	outline: none;
+	border: 2px solid black;
+}
+
+.dropbtn {
+    background-color: #FC7F3C;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+	z-index: 10;
+	-webkit-border-radius: 11px;
+	-moz-border-radius: 11px;
+	border-radius: 2rem;
+	outline: none;
+	border: 2px solid black;
+}
+
+
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #FC7F3C;
+	z-index: 10;
+
+}
+
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+	z-index: 10;
+}
+
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 10;
+}
+
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+	z-index: 10;
+}
+
+
+.dropdown-content a:hover {
+	background-color: #f1f1f1;
+	z-index: 10;
+	}
+
+
+.show {
+	display:block;
+	z-index: 10;
+	}
+
+p{
+	opacity: 1;
+}
+
+body,html{
+	
+	background-image: url(https://www.sitrain-learning.siemens.com/dam/jcr:b944ebb8-b01c-4516-b71b-1c52a1ad9a04/Cyber-security.jpeg);
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	height : 10%;
+}
+.password-strength {
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
 }
